# mcprs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/demonstrate_server/: Cargo.toml
examples/demonstrate_server/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
src/: agent.rs  agent_deepseek.rs  agent_openai.rs  auth.rs  client.rs  conversation.rs  lib.rs  server.rs  streaming.rs  testing.rs
tests/: agent_deepseek_test.rs  agent_registry_test.rs  auth_test.rs  client_test.rs  integration_test.rs  openai_agent_test.rs  streaming_test.rs
